# mcp-server-calculator

./: README.md  pyproject.toml
src/mcp_server_calculator/: server.py
