[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-calculator"
version = "0.1.0"
description = "A simple calculator MCP server with streamable-http transport"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.9.0",
]

[project.scripts]
mcp-server-calculator = "mcp_server_calculator.server:main"

[tool.setuptools.packages.find]
where = ["src"]
